--- a/src/main/resources/assets/testfabric/lang/zh_cn.json
+++ b/src/main/resources/assets/testfabric/lang/zh_cn.json
@@ -3,10 +3,15 @@
   "item.testfabric.horn": "喇叭",
   "item.testfabric.redstone_transform_engine": "红石转化引擎",
   "block.testfabric.redstone_transform_engine": "红石转化引擎",
-  "item_group.testfabric.mod_item_tab": "测试fabric",
+  "item_group.testfabric.mod_item_tab": "未来工业: 自动化",
   "block.testfabric.vertical_half_brick": "竖半砖",
   "block.testfabric.mining_machine": "采矿机",
   "block.testfabric.transport_pipe": "基础运输管道",
   "block.testfabric.display_block": "展示方块",
-  "block.testfabric.transport_combiner": "运输合流器"
+  "block.testfabric.transport_combiner": "运输合流器",
+  "item.testfabric.steel_ingot": "钢锭",
+  "item.testfabric.steel_helmet": "钢头盔",
+  "item.testfabric.steel_chestplate": "钢胸甲",
+  "item.testfabric.steel_leggings": "钢护腿",
+  "item.testfabric.steel_boots": "钢靴子"
 }
