--- a/src/main/resources/assets/testfabric/lang/zh_cn.json
+++ b/src/main/resources/assets/testfabric/lang/zh_cn.json
@@ -15,5 +15,6 @@
   "item.testfabric.steel_chestplate": "钢胸甲",
   "item.testfabric.steel_leggings": "钢护腿",
   "item.testfabric.steel_boots": "钢靴子",
-  "item.testfabric.horn.tooltip": "这是一个喇叭, 使用时会输出信息"
+  "item.testfabric.horn.tooltip": "这是一个喇叭, 使用时会输出信息",
+  "block.testfabric.pipe_filter": "过滤器"
 }
